# ai-panel-studio

./: .env.example  .gitignore  README.md  pyproject.toml  作业要求.md
docs/: API.md  PRD.md  PROMPTS.md  SCHEMA.md  WORKFLOW.md
scripts/: seed_data.py
src/panel_studio/: __init__.py  app.py  config.py  core.py  db.py  llm.py  models.py  schema.py  sse.py
src/panel_studio/static/: index.html  studio.html
src/panel_studio/static/css/: index.css  studio.css  theme.css
src/panel_studio/static/js/: index.js  studio.js  utils.js
tests/: conftest.py  test_api.py  test_db.py  test_llm.py  test_schema.py
